// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`lsp compile mode preservation > external file overwrite via delete+create still produces JS 1`] = `
[
  "rewatch.lsp",
  "  lsp.initialized",
  "    lsp.register_watchers[watcher_count=3]",
  "      lsp.discover_package[name=@rewatch-test/dep-chain]",
  "        lsp.source_dir[dir=packages/dep-chain/src, recursive=true]",
  "  lsp.initial_build[project=@rewatch-test/dep-chain]",
  "    build.load_package_sources[package=@rewatch-test/dep-chain]",
  "    packages.parse_packages",
  "    clean.cleanup_previous_build",
  "    build.parse[dirty_modules=4]",
  "      build.parse_file[module=App, package=@rewatch-test/dep-chain, kind=implementation]",
  "      build.parse_file[module=Button, package=@rewatch-test/dep-chain, kind=implementation]",
  "      build.parse_file[module=Leaf, package=@rewatch-test/dep-chain, kind=implementation]",
  "      build.parse_file[module=Main, package=@rewatch-test/dep-chain, kind=implementation]",
  "    full_typecheck[module_count=4, output=lsp]",
  "      build.typecheck",
  "        build.typecheck_wave[file_count=2]",
  "          build.typecheck_file[module=Button, package=@rewatch-test/dep-chain]",
  "          build.typecheck_file[module=Leaf, package=@rewatch-test/dep-chain]",
  "        build.typecheck_wave[file_count=1]",
  "          build.typecheck_file[module=App, package=@rewatch-test/dep-chain]",
  "        build.typecheck_wave[file_count=1]",
  "          build.typecheck_file[module=Main, package=@rewatch-test/dep-chain]",
  "  lsp.did_save[file=packages/dep-chain/src/Leaf.res]",
  "  lsp.flush[incremental_builds=packages/dep-chain/src/Leaf.res]",
  "    lsp.flush.file_build.batch[modules=["Leaf"]]",
  "      lsp.flush.file_build.compile_dependencies",
  "        build.parse[dirty_modules=1]",
  "          build.parse_file[module=Leaf, package=@rewatch-test/dep-chain, kind=implementation]",
  "        compile_dependencies[module_count=4, output=lsp]",
  "          build.compile",
  "            build.compile_wave[file_count=1]",
  "              build.compile_file[module=Leaf, package=@rewatch-test/dep-chain, suffix=.mjs, module_system=esmodule]",
  "      lsp.flush.file_build.typecheck_dependents[dependent_count=2]",
  "        typecheck_dependents[module_count=4, output=lsp]",
  "          build.typecheck",
  "            build.typecheck_wave[file_count=1]",
  "              build.typecheck_file[module=App, package=@rewatch-test/dep-chain]",
  "            build.typecheck_wave[file_count=1]",
  "              build.typecheck_file[module=Main, package=@rewatch-test/dep-chain]",
  "      lsp.flush.file_build.compile_resolved",
  "  lsp.did_change_watched_files[file_count=1]",
  "  lsp.flush[project_builds=deleted: packages/dep-chain/src/Leaf.res]",
  "    lsp.flush.project_build[project=@rewatch-test/dep-chain]",
  "      build.load_package_sources[package=@rewatch-test/dep-chain]",
  "      packages.parse_packages",
  "      clean.cleanup_previous_build",
  "      build.parse[dirty_modules=0]",
  "      full_typecheck[module_count=3, output=lsp]",
  "        build.typecheck",
  "          build.typecheck_wave[file_count=1]",
  "            build.typecheck_file[module=App, package=@rewatch-test/dep-chain]",
  "        build.compile_error",
  "  lsp.did_change_watched_files[file_count=1]",
  "  lsp.flush[project_builds=created: packages/dep-chain/src/Leaf.res, incremental_builds=packages/dep-chain/src/Leaf.res]",
  "    lsp.flush.project_build[project=@rewatch-test/dep-chain]",
  "      build.load_package_sources[package=@rewatch-test/dep-chain]",
  "      packages.parse_packages",
  "      clean.cleanup_previous_build",
  "      build.parse[dirty_modules=1]",
  "        build.parse_file[module=Leaf, package=@rewatch-test/dep-chain, kind=implementation]",
  "      full_typecheck[module_count=4, output=lsp]",
  "        build.typecheck",
  "          build.typecheck_wave[file_count=1]",
  "            build.typecheck_file[module=Leaf, package=@rewatch-test/dep-chain]",
  "          build.typecheck_wave[file_count=1]",
  "            build.typecheck_file[module=App, package=@rewatch-test/dep-chain]",
  "          build.typecheck_wave[file_count=1]",
  "    lsp.flush.file_build.batch[modules=["Leaf"]]",
  "      lsp.flush.file_build.compile_dependencies",
  "        build.parse[dirty_modules=1]",
  "          build.parse_file[module=Leaf, package=@rewatch-test/dep-chain, kind=implementation]",
  "        compile_dependencies[module_count=4, output=lsp]",
  "          build.compile",
  "            build.compile_wave[file_count=1]",
  "              build.compile_file[module=Leaf, package=@rewatch-test/dep-chain, suffix=.mjs, module_system=esmodule]",
  "      lsp.flush.file_build.typecheck_dependents[dependent_count=2]",
  "        typecheck_dependents[module_count=4, output=lsp]",
  "          build.typecheck",
  "            build.typecheck_wave[file_count=1]",
  "              build.typecheck_file[module=App, package=@rewatch-test/dep-chain]",
  "            build.typecheck_wave[file_count=1]",
  "              build.typecheck_file[module=Main, package=@rewatch-test/dep-chain]",
  "      lsp.flush.file_build.compile_resolved",
]
`;

exports[`lsp compile mode preservation > preserves FullCompile intent across intervening typecheck passes 1`] = `
[
  "rewatch.lsp",
  "  lsp.initialized",
  "    lsp.register_watchers[watcher_count=3]",
  "      lsp.discover_package[name=@rewatch-test/dep-chain]",
  "        lsp.source_dir[dir=packages/dep-chain/src, recursive=true]",
  "  lsp.initial_build[project=@rewatch-test/dep-chain]",
  "    build.load_package_sources[package=@rewatch-test/dep-chain]",
  "    packages.parse_packages",
  "    clean.cleanup_previous_build",
  "    build.parse[dirty_modules=4]",
  "      build.parse_file[module=App, package=@rewatch-test/dep-chain, kind=implementation]",
  "      build.parse_file[module=Button, package=@rewatch-test/dep-chain, kind=implementation]",
  "      build.parse_file[module=Leaf, package=@rewatch-test/dep-chain, kind=implementation]",
  "      build.parse_file[module=Main, package=@rewatch-test/dep-chain, kind=implementation]",
  "    full_typecheck[module_count=4, output=lsp]",
  "      build.typecheck",
  "        build.typecheck_wave[file_count=2]",
  "          build.typecheck_file[module=Button, package=@rewatch-test/dep-chain]",
  "          build.typecheck_file[module=Leaf, package=@rewatch-test/dep-chain]",
  "        build.typecheck_wave[file_count=1]",
  "          build.typecheck_file[module=App, package=@rewatch-test/dep-chain]",
  "        build.typecheck_wave[file_count=1]",
  "          build.typecheck_file[module=Main, package=@rewatch-test/dep-chain]",
  "  lsp.did_save[file=packages/dep-chain/src/App.res]",
  "  lsp.flush[incremental_builds=packages/dep-chain/src/App.res]",
  "    lsp.flush.file_build.batch[modules=["App"], error_count=1]",
  "      lsp.flush.file_build.compile_dependencies[error_count=1]",
  "        build.parse[dirty_modules=1]",
  "          build.parse_file[module=App, package=@rewatch-test/dep-chain, kind=implementation]",
  "        compile_dependencies[module_count=4, output=lsp]",
  "          build.compile",
  "            build.compile_wave[file_count=2]",
  "              build.compile_file[module=Button, package=@rewatch-test/dep-chain, suffix=.mjs, module_system=esmodule]",
  "              build.compile_file[module=Leaf, package=@rewatch-test/dep-chain, suffix=.mjs, module_system=esmodule]",
  "            build.compile_wave[file_count=1]",
  "              build.compile_file[module=App, package=@rewatch-test/dep-chain, suffix=.mjs, module_system=esmodule]",
  "          build.compile_error",
  "      lsp.flush.file_build.typecheck_dependents[dependent_count=1]",
  "        typecheck_dependents[module_count=4, output=lsp]",
  "          build.typecheck",
  "            build.typecheck_wave[file_count=1]",
  "              build.typecheck_file[module=Main, package=@rewatch-test/dep-chain]",
  "      lsp.flush.file_build.compile_resolved",
  "  lsp.did_save[file=packages/dep-chain/src/Leaf.res]",
  "  lsp.flush[incremental_builds=packages/dep-chain/src/Leaf.res]",
  "    lsp.flush.file_build.batch[modules=["Leaf"], error_count=1]",
  "      lsp.flush.file_build.compile_dependencies",
  "        build.parse[dirty_modules=1]",
  "          build.parse_file[module=Leaf, package=@rewatch-test/dep-chain, kind=implementation]",
  "        compile_dependencies[module_count=4, output=lsp]",
  "          build.compile",
  "            build.compile_wave[file_count=1]",
  "              build.compile_file[module=Leaf, package=@rewatch-test/dep-chain, suffix=.mjs, module_system=esmodule]",
  "      lsp.flush.file_build.typecheck_dependents[dependent_count=2, error_count=1]",
  "        typecheck_dependents[module_count=4, output=lsp]",
  "          build.typecheck",
  "            build.typecheck_wave[file_count=1]",
  "              build.typecheck_file[module=App, package=@rewatch-test/dep-chain]",
  "          build.compile_error",
  "      lsp.flush.file_build.compile_resolved",
  "  lsp.did_save[file=packages/dep-chain/src/Button.res]",
  "  lsp.flush[incremental_builds=packages/dep-chain/src/Button.res]",
  "    lsp.flush.file_build.batch[modules=["Button"]]",
  "      lsp.flush.file_build.compile_dependencies",
  "        build.parse[dirty_modules=1]",
  "          build.parse_file[module=Button, package=@rewatch-test/dep-chain, kind=implementation]",
  "        compile_dependencies[module_count=4, output=lsp]",
  "          build.compile",
  "            build.compile_wave[file_count=1]",
  "              build.compile_file[module=Button, package=@rewatch-test/dep-chain, suffix=.mjs, module_system=esmodule]",
  "      lsp.flush.file_build.typecheck_dependents[dependent_count=2]",
  "        typecheck_dependents[module_count=4, output=lsp]",
  "          build.typecheck",
  "            build.typecheck_wave[file_count=1]",
  "              build.typecheck_file[module=App, package=@rewatch-test/dep-chain]",
  "            build.typecheck_wave[file_count=1]",
  "              build.typecheck_file[module=Main, package=@rewatch-test/dep-chain]",
  "      lsp.flush.file_build.compile_resolved[modules=["App"]]",
  "        compile_dependencies[module_count=4, output=lsp]",
  "          build.compile",
  "            build.compile_wave[file_count=2]",
  "            build.compile_wave[file_count=1]",
  "              build.compile_file[module=App, package=@rewatch-test/dep-chain, suffix=.mjs, module_system=esmodule]",
]
`;
